# AES_System_Model

./: .gitignore  CMakeLists.txt  README.md
include/: aes.h  aes_constants.h  aes_key_expansion.h  aes_math.h  aes_transformation.h
src/: aes.c  aes_key_expansion.c  aes_math.c  aes_transformation.c  main.c
test/: test_aes.c
